x-platform/public/dm-xplatform/controllers/dm-xplatform-space/dm-xplatform-space.less
.dm-space {
  position: relative;
  float: left;
  height: 100%;

  .dm-space-live {
    position: absolute;
    bottom: 30px;
    left: ~"calc(50% - 55px)";
    width: 110px;
    height: 30px;
  }
}
.dm-spacesidebar {
  .dm-space-live {
    position: absolute;
    bottom: 30px;
    left: 0;
    right: 0;
    height: 30px;
  }
}


.full-frame {
  border: none;
  background: none;
  width: 100%;
  height: 99%;
}

.dm-space.zen-mode {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  width: 100%;
  z-index: 11;
  background: rgb(0, 0, 0);
  width: 100% !important;
  overflow: hidden;
}


.dm-space-top {
  outline: none;
}

.dm-spacesidebar {
  position: relative;
  height: 100%;
  float: left;
  background-color: rgb(30,30,30);
  overflow: hidden;
}
.dm-spacesidebar-right-container {
  top: 0;
  right: 0;
  position: absolute;
  z-index: 9;
}

.nav > li > .workspace-btn{
  &:focus, &:hover {
    background-color: #a9e238;
  }
}

.dm-space, 
.dm-spacesidebar {
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
}
.dm-spacesidebar-user {
  position: absolute;
  bottom: 30px;
  left: 0;
  right: 0;
  border-top: 1px solid #333;
  transition: bottom 0.5s ease-in-out;

  a {
    color: #888888;
  }
}
.dm-spacesidebar.pinned {
  .dm-spacesidebar-user {
    bottom: 65px;
  }
  .dm-spacesidebar-right {
    padding-bottom: 60px;
  }
}

.dm-spacesidebar-right {
  height: 100%;
  padding-bottom: 30px;
  transition: padding-bottom 0.5s ease-in-out;
  > div {
    height: 100%;
  }

  > .nav, > div > .nav {
    border-bottom: 0;

    li {
      width: 35px;
      text-align: center;
      a {
        border-radius: 0;
        margin: 0;
        padding: 5px;
        font-size: 12px;
      }
    }
    li.active > a,
    li.active > a:hover {
      border-bottom: none;
      background-color: rgb(86,171,205);
    }
  }  

  .tab-content {
    height: calc(~"100% - 42px");
    overflow-y: auto;

    .tab-pane {
      height: 100%;
    }
  }
}

.dm-spacesidebar-left {
  height: calc(~"100% - 55px");
  overflow-y: auto;
  font-size: 15px;

  .nav > li {
    margin: 5px 0;
  }
  .nav > li > a {
    border-radius: 0;
  }
  .nav > li.active > a {
    transition: background-color 0.2s ease;
    background-color: rgb(86,171,205);
  }

  .active .show-if-active, .hide-if-active {
    display: inline-block;
  }

  .active .hide-if-active, .show-if-active {
    display: none;
  }
  li > a {
    padding: 5px 5px;
  }
  li > ul > li > a {
    padding-left: 15px;
  }

  .btn-success {
    background-color: #7DAA25;
    border-color: #4B6615;
  }
  .workspace-btn {
    border-radius: 0;
  }
}

.nav-icon {
  width: 30px;
  text-align: center;
  display: inline-block;
}

.dm-space-checkbox {
  padding: 0.2em 0 0.5em 1.0em;
  font-size: 18px;
}

.dm-space-questions {
  position: relative;
  height: calc(~"100% - 48px");
  overflow-y: auto;

  button {
    border-radius: 0;
  }
}

.dm-space-saves {
  overflow-y: auto;
  height: 100%;
}

.dm-space-alert {
  border-radius: 0;
  margin: 0;
}

